context engineering photo

--- a/context_engineering.ipynb
+++ b/context_engineering.ipynb
@@ -11,6 +11,8 @@
     "\n",
     "## What is context engineering?\n",
     "\n",
+    "![Context engineering](resources/context_engineering.jpeg)\n",
+    "\n",
     "**Context engineering** is the discipline of how we structure, retrieve, and manage information so that LLMs can reason effectively. It goes beyond prompts to include instructions, knowledge, tools, retrieval, memory, and governance — all orchestrated to ensure the model has the *right information in the right format at the right time*. As conversations grow longer, the context window becomes a critical bottleneck that can lead to:\n",
     "\n",
     "- **Context rot**: Degradation in agent performance as conversations exceed model context limits\n",
