adding image sources

--- a/context_engineering.ipynb
+++ b/context_engineering.ipynb
@@ -13,6 +13,8 @@
     "\n",
     "![Context engineering](resources/context_engineering.jpeg)\n",
     "\n",
+    "**Image source**: https://x.com/dexhorthy/status/1933283008863482067\n",
+    "\n",
     "**Context engineering** is the discipline of how we structure, retrieve, and manage information so that LLMs can reason effectively. It goes beyond prompts to include instructions, knowledge, tools, retrieval, memory, and governance — all orchestrated to ensure the model has the *right information in the right format at the right time*. As conversations grow longer, the context window becomes a critical bottleneck that can lead to:\n",
     "\n",
     "- **Context rot**: Degradation in agent performance as conversations exceed model context limits\n",
@@ -26,6 +28,8 @@
     "As enterprises move beyond simple Q&A and into multi-turn, agentic systems that can reason and act over long time horizons, single-prompt engineering, alone, can’t manage the flood of context these systems depend on:\n",
     "\n",
     "![Types of Context Management](resources/types_of_context.png)\n",
+    "\n",
+    "**Image source**: https://rlancemartin.github.io/2025/06/23/context_engineering/\n",
     "\n",
     "- **Instructions (the rules)**: system prompts, task instructions, few-shot examples, formatting rules, and tool descriptions\n",
     "- **Knowledge (the facts)**: documents, embeddings, domain-specific data, chat history, and long-term memory\n",
@@ -168,7 +172,7 @@
     "By doing this early, the system ensures that only the most recent and relevant user turns are preserved, keeping context focused and performant.\n",
     "\n",
     "\n",
-    "### How It Works\n",
+    "### How it works\n",
     "\n",
     "We extend Strands’ built-in `SlidingWindowConversationManager` into a custom **`ProactiveTurnTrimmer`**, which:\n",
     "\n",
@@ -177,21 +181,21 @@
     "- **Optimizes resources** → Ensures predictable token usage and model performance in long-running sessions.\n",
     "\n",
     "This differs from a *reactive* approach (which trims *after* overflow).  \n",
-    "Proactive trimming is like an automatic cleanup crew — keeping your model’s short-term memory clean and coherent before every turn.\n",
+    "Proactive trimming keeps your model’s short-term memory clean and coherent before every turn.\n",
     "\n",
     "---\n",
     "\n",
-    "### FileSessionManager — Persistent Session Memory\n",
+    "### FileSessionManager — persistent session memory\n",
     "\n",
     "In parallel, we use **`FileSessionManager`** to handle **long-term persistence** of the agent’s state.  \n",
     "While the `ProactiveTurnTrimmer` manages *active context*, `FileSessionManager` preserves *historical memory* between runs.\n",
     "\n",
-    "#### What It Does\n",
+    "#### What it does\n",
     "- Stores all messages as structured JSON under `.strands/sessions/...`\n",
     "- Allows sessions to be reloaded or replayed later\n",
     "- Creates a lightweight local “memory layer” for experimentation or auditability\n",
     "\n",
-    "#### Why It Matters\n",
+    "#### Why it matters\n",
     "Together, these components embody the **inner and outer loops** of context engineering:\n",
     "\n",
     "| Layer | Mechanism | Function | Context Principle |\n",
@@ -203,22 +207,7 @@
     "- The **active context** (short-term) stays clean and relevant.\n",
     "- The **session history** (long-term) remains available for recall, analysis, or summarization later.\n",
     "\n",
-    "---\n",
-    "\n",
-    "### Why It Matters in Enterprise Contexts\n",
-    "\n",
-    "In production-scale systems — customer assistants, multi-agent workflows, or regulated industries — proactive context management is critical for:\n",
-    "\n",
-    "- **Consistency** → Prevent drift by constraining context size and order.  \n",
-    "- **Cost-efficiency** → Control token growth across multi-turn conversations.  \n",
-    "- **Compliance & Auditability** → Persist all interactions for review via session storage.  \n",
-    "- **Scalability** → Maintain stable reasoning as conversations evolve over time.\n",
-    "\n",
-    "> **Context engineering isn’t just about prompt design — it’s about lifecycle management.**  \n",
-    "> The proactive trimming strategy governs what stays *in the model’s mind* (state/history),  \n",
-    "> while session persistence governs what stays *on record* (memory).\n",
-    "\n",
-    "✅ **Next Step:**  \n",
+    "✅ **Next step:**  \n",
     "We’ll build on this by adding summarization — compressing older context while keeping recent turns verbatim, merging *windowing* with *memory abstraction* for full context lifecycle management.\n"
    ]
   },
